# hatch-vulnerable-code

./: .env  README.md  pyproject.toml  requirements.txt
src/my_vulnerable_project/: __init__.py
