[build-system]
requires = [
    "hatchling",
    "hatch-pip-compile"
]
build-backend = "hatchling.build"

[project]
name = "my_vulnerable_project"
version = "0.1.0"
description = "A sample project with vulnerable dependencies for educational purposes."
# readme = "README.md"  # Commented out or removed
requires-python = ">=3.7"
license = {text = "MIT"}

dependencies = [
    "flask==1.0.2",        # Known vulnerabilities: CVE-2019-1010083, CVE-2018-1000656
    "requests==2.19.1",    # Known vulnerabilities: CVE-2018-18074
    "django==2.2.0",       # Known vulnerabilities: CVE-2019-12308, CVE-2019-6975
    "ansible==2.9.27",     # Compatible Ansible version
]

[tool.hatch.envs.default]
type = "pip-compile"
dependencies = [
    "flask==1.0.2",
    "requests==2.19.1",
    "django==2.2.0",
    "ansible==2.9.27",     # Compatible Ansible version
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_vulnerable_project"]

